name:                Blog
version:             0.1.0.0
synopsis:            My blog
description:         Please see README.md
homepage:            https://github.com/eliza0x/eliza0x.github.io
license:             MIT
license-file:        LICENSE
author:              Eliza Calls
maintainer:          me@eliza.link
copyright:           2016 Eliza Calls.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Pages 
                     , Pages.TopPages
                     , Pages.Posts
                     , Pages.Css
                     , Pages.Etc
                     , Pages.Util
                     , Pages.Template
                     , Pages.Template.Flame
                     , Pages.Template.Archive
                     , Pages.Template.Flame
                     , Pages.Template.Post
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , shakespeare
                     , text
                     , blaze-html
                     , containers
  ghc-options:      -threaded -Wall
