name:                Blog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/eliza0x/BlogT#readme
license:             BSD3
license-file:        LICENSE
author:              Eliza Calls
maintainer:          me@eliza.link
copyright:           2016 Eliza Calls.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , hakyll-shakespeare
                     , clay
                     , containers
                     , pandoc
